Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10014

ep-engine crashed due to Assertion `bySeqno != 0' failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Centos 64-bit
    • 2
    • June 30 - July 18

    Description

      http://factory.couchbase.com/job/testrunner-gerrit-master/226/consoleFull

      http://factory.couchbase.com/job/testrunner-gerrit-master/226/artifact/testrunner/cluster_run.log

      in our test's output we see
      Traceback (most recent call last):
      File "pytests/rebalance/rebalancein.py", line 47, in rebalance_in_with_ops
      task.result()
      File "lib/tasks/future.py", line 160, in result
      return self.__get_result()
      File "lib/tasks/future.py", line 112, in __get_result
      raise self._exception
      MemcachedError: Memcached error #7 'Not my vbucket': Connection reset with error: [Errno 32] Broken pipe

      but in fact, there occurs a erlang crash on one of the nodes

      [error_logger:error,2014-01-26T7:32:06.022,n_0@10.3.2.199:error_logger<0.6.0>:ale_error_logger_handler:log_report:72]
      =========================CRASH REPORT=========================
      crasher:
      initial call: erlang:apply/2
      pid: <0.614.0>
      registered_name: []
      exception error: no match of right hand side value

      {error,closed}
      in function mc_client_binary:cmd_binary_vocal_recv/5 (src/mc_client_binary.erl, line 123)
      in call from mc_client_binary:set_vbucket/3 (src/mc_client_binary.erl, line 336)
      in call from ns_memcached:do_handle_call/3 (src/ns_memcached.erl, line 526)
      in call from ns_memcached:worker_loop/3 (src/ns_memcached.erl, line 189)
      ancestors: ['ns_memcached-default','single_bucket_sup-default',
      <0.578.0>]
      messages: []
      links: <0.595.0>,#Port<0.10095>
      dictionary: []
      trap_exit: false
      status: running
      heap_size: 75025
      stack_size: 24
      reductions: 5768556
      neighbours:

      [user:info,2014-01-26T7:32:06.023,n_0@10.3.2.199:ns_memcached-default<0.595.0>:ns_memcached:terminate:752]Control connection to memcached on 'n_0@10.3.2.199' disconnected: {badmatch,
      {error,
      closed}}
      [error_logger:error,2014-01-26T7:32:06.024,n_0@10.3.2.199:error_logger<0.6.0>:ale_error_logger_handler:log_report:72]
      =========================CRASH REPORT=========================
      crasher:
      initial call: erlang:apply/2
      pid: <0.611.0>
      registered_name: []
      exception error: no match of right hand side value {error,closed}

      in function mc_binary:quick_stats_recv/3 (src/mc_binary.erl, line 53)
      in call from mc_binary:quick_stats_loop/5 (src/mc_binary.erl, line 153)
      in call from mc_binary:quick_stats/5 (src/mc_binary.erl, line 138)
      in call from ns_memcached:do_handle_call/3 (src/ns_memcached.erl, line 535)
      in call from ns_memcached:worker_loop/3 (src/ns_memcached.erl, line 189)
      ancestors: ['ns_memcached-default','single_bucket_sup-default',
      <0.578.0>]
      messages: []
      links: [<0.595.0>]
      dictionary: []
      trap_exit: false
      status: running
      heap_size: 2584
      stack_size: 24
      reductions: 2070
      neighbours:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            venu Venu Uppalapati (Inactive)
            andreibaranouski Andrei Baranouski
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty