MB-10014: Missing parameter in item creation

Error: Assuming wrong value for bySeqno while
creating an item instance causing the assertion
to fail, whenever vbucketId is 0.

Fix: Add the missing parameter (which is 0 for
ext_len, when ext_meta is NULL) while creating
item instance.

Change-Id: I6f2294eff26c509c6a72e01db451d2b7a55cefda
Reviewed-on: http://review.couchbase.org/33147
Tested-by: abhinav dangeti <abhinav@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>